2025-06-14

- Optionally numbering direction waypoints

2025-05-18

- Fixed: Changed name of OruxMaps icon 1015 to "Keep Left"
  in file GPX-QMapShack-to-OruxMaps.en
- Fixed: Added missing OruxMaps icon 1008 "Continue"
  to file GPX-QMapShack-to-OruxMaps.en
- Added example screenshots

2025-03-12

- Fixed: Conversion of tracks with a very large number of track points failed
  due to exceeding maximum command line length (32768 characters)
  -> "curl" now reads BRouter's URL from configuration file instead from command line
- BRouter is now running as separate thread improving BRouter and "curl" synchronization
  -> Tracks with a very large number of track points are converted much, much faster
- Fixed: BRouter log output was out of chronological order

2025-03-05

- Fixed: Underline link to GitHub repository was missing
- Fixed: Selection in file selection window was not highlighted (Linux only!)

2025-02-20

- Increased conversion speed significantly
- Fixed GUI window flickering while waiting on BRouter's reply
- Activated link to GitHub repository

2025-02-19

- Speed up adding track support waypoints

2025-02-19

- Initial version
