@@ -24,7 +24,7 @@ if {[encoding system] != "utf-8"} {
 if {![info exists tk_version]} {package require Tk}
 wm withdraw .
 
-set version "2025-06-14"
+set version "2025-08-27"
 set script [file normalize [info script]]
 set title [file tail $script]
 set cwd [pwd]
@@ -401,6 +401,7 @@ set console 0;			# Valid values: 0=hide, 1=show
 
 set ctid [thread::create -joinable "
   package require Tk
+  package require tcl::chan::fifo2
   wm withdraw .
   wm title . \"$title - [mc l99]\"
   set font_size ${console.font.size}
@@ -455,22 +456,27 @@ ctsend {
     .txt yview moveto [lindex $py 0]
   }
 
-  set lines 0
   proc write {text} {
-    incr ::lines
     .txt configure -state normal
-    if {[string index $text 0] == "\r"} {
-      set text [string range $text 1 end]
-      .txt delete end-2l end-1l
+    foreach item [split $text \n] {
+      if {[string index $item 0] == "\r"} {
+	set item [string range $item 1 end]
+	.txt delete end-2l end-1l
+      }
+      if {[string index $item end] == "\b"} {
+	set item [string range $item 0 end-1]
+      } else {
+	append item \n
+      }
+      .txt insert end $item
     }
-    .txt insert end $text
     .txt configure -state disabled
-    .txt see end
-    if {$::lines == 256} {update; set ::lines 0}
+    if {[winfo ismapped .]} {.txt see end}
   }
 
   proc show_hide {show} {
     if {$show} {
+      .txt see end
       if {$::geometry == ""} {
 	wm deiconify .
       } else {
@@ -488,12 +494,14 @@ ctsend {
   }
 
   foreach i {1 2} {
-    lassign [chan pipe] fdi fdo
+    lassign [::tcl::chan::fifo2] fdi fdo
     thread::detach $fdo
-    fconfigure $fdi -blocking 0 -buffering line -translation lf
+    fconfigure $fdi -blocking 0 -buffering full -buffersize 65536 -translation lf
     fileevent $fdi readable "
-      while {\[gets $fdi line\] >= 0} {write \"\$line\\n\"}
-    "
+      set text {}
+      while {\[gets $fdi line\] >= 0} {lappend text \$line}
+      write \[join \$text \\n\]
+      "
     set fdo$i $fdo
   }
 }
@@ -508,11 +516,11 @@ if {$console == 1} {
   ctsend "show_hide 1"
 }
 
-# Mark output message
+# Write to console
 
 proc cputw {text} {cputs "\[+++\] $text"}
 proc cputi {text} {cputs "\[===\] $text"}
-proc cputx {text} {cputs "\[···\] $text"}
+proc cputx {text} {cputs "\[   \] $text"}
 
 cputw [mc m51 [pid] [file tail [info nameofexecutable]]]
 cputw "Tcl/Tk version $tcl_patchLevel"
@@ -585,7 +593,12 @@ if {!$rc} {
 
 if {$rc || $java_version == 0} \
   {error_message [mc e08 Java [get_shell_command $command] $result] exit}
-if {$java_version < 17} {error_message [mc e07 Java $java_string 17] exit}
+
+# Check minimum required Java version
+
+set java_version_min 17
+if {$java_version < $java_version_min} \
+  {error_message [mc e07 Java $java_string $java_version_min] exit}
 
 # Check BRouter home folder for JAR file
 # and subfolders profile and segments
@@ -919,7 +932,10 @@ checkbutton .output -text [mc c99] -width 32 \
 	-variable console.show -command show_hide_console
 pack .output -after .buttons -anchor n -expand 1 -fill x
 
-proc show_hide_console {} {ctsend "show_hide ${::console.show}";update}
+proc show_hide_console {} {
+  update idletasks
+  ctsend "show_hide ${::console.show}"
+}
 show_hide_console
 
 # Map/Unmap events are generated by Windows only!
@@ -1010,12 +1026,6 @@ proc selection_ok {} {
 
 # Start BRouter server as thread
 
-set btid [thread::create -joinable "
-    set fdo [ctsend "set fdo2"]
-    thread::wait
-  "]
-proc btsend {script} "return \[send $btid \$script\]"
-
 proc brouter_start {} {
 
   upvar #0 brouter_home home brouter_jar jar segments_folder segments \
@@ -1062,16 +1072,22 @@ proc brouter_start {} {
   cputi "[mc m54 $text] ..."
   cputs [get_shell_command $command]
 
-  btsend "set command {$command}"
-  set rc [btsend {catch {open "| $command 2>@1" r} result}]
+  set tid [thread::create -joinable "
+    set fdo [ctsend "set fdo2"]
+    set command {$command}
+    thread::wait
+    "]
+  proc tsend {script} "return \[send $tid \$script\]"
+
+  set rc [tsend {catch {open "| $command 2>@1" r} result}]
 
   if {$rc} {
-    set result [btsend "set result"]
+    set result [tsend "set result"]
     error_message [mc m55 "$text: $result"] return
     return
   }
 
-  btsend {
+  tsend {
     thread::attach $fdo
     fconfigure $fdo -blocking 0 -buffering line -translation lf
     set fd $result
@@ -1085,7 +1101,7 @@ proc brouter_start {} {
 
   namespace eval brouter {}
   namespace upvar brouter pid pid exe exe
-  set pid [btsend {pid $fd}]
+  set pid [tsend {pid $fd}]
   set exe [file tail [lindex $command 0]]
 
   cputi [mc m51 $pid $exe]
@@ -1261,19 +1277,30 @@ proc convert_gpx_track {track} {
     return
   }
 
-  update; # Force BRouter log output before reading BRouter reply
+  # Prevent script from becoming unresponsive 
+  # when BRouter is runnning long time
 
+  set ::curl_data ""
   set fd $result
-  set data [read -nonewline $fd]
-  close $fd
+  fconfigure $fd -blocking 0 -buffering full -buffersize 65536
+  fileevent $fd readable "
+    while {\[gets $fd line\] >= 0} {append ::curl_data \$line\\n}
+    if {\[eof $fd\]} {close $fd; set curl_ready 1}
+    "
+  vwait curl_ready
+  unset ::curl_ready
 
+  upvar #0 curl_data data
   if {![regexp {^\s*<.*} $data]} {
     if {$data == ""} {cputw [mc e17]} \
     else {cputs "\[SRV\] $data"}
     return ""
   }
 
-  # Uncomment to output BRouter's GPX track
+  # Uncomment to write BRouter's GPX track into output console
+  #cputs $data
+
+  # Uncomment to write BRouter's GPX track into file
   #set fd [open track.$trkname.gpx w]
   #puts $fd $data
   #close $fd
@@ -1437,7 +1464,7 @@ save_script_settings
 
 if {[ctsend "winfo ismapped ."]} {
   ctsend "
-    write \"\n[mc m99]\"
+    write \"\n[mc m99]\b\"
     wm protocol . WM_DELETE_WINDOW {}
     bind . <ButtonRelease-3> {destroy .}
     tkwait window .
